ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
   - host: localhost
     http:
       paths:
       - path: /users
         pathType: Prefix
         backend:
           service:
             name: user-service
             port:
               number: 3000

       - path: /products
         pathType: Prefix
         backend:
           service:
             name: product-service
             port:
               number: 3001

       - path: /
         pathType: Prefix
         backend:
           service:
             name: web-interface
             port:
               number: 80
