ingress/ingress-configuration.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-configuration
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    # - host: localhost
    - http:
      paths:
      # Default path for web interface
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-interface
            port:
              number: 80
      # Paths for user service
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 3000
      # Path for product service
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 3001
